Changes to avoid missing minted.glo complaint at end of make minted.pdf

--- a/source/minted.dtx
+++ b/source/minted.dtx
@@ -36,7 +36,7 @@
 %<*driver>
 \documentclass{ltxdoc}
 \EnableCrossrefs
-\CodelineIndex
+%\CodelineIndex
 %\DisableCrossrefs
 %\RecordChanges
 %\OnlyDescription
@@ -190,7 +190,8 @@
 
 \begin{document}
 \DocInput{minted.dtx}
-\PrintIndex
+%\PrintChanges
+%\PrintIndex
 \end{document}
 %</driver>
 % \fi
